[package]
name = "ru_complete"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.2" ,features=["runtime","http1","http2","server"]}
tokio = { version = "1", features = ["full"] }
futures-core = "0.3.12"
tokio-stream="0.1.2"
anyhow = "1.0.38"
err_tools = "0.1.0"
