[package]
name = "ru_complete"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

[lib]
name="ru_complete"
path="src/lib.rs"

[[bin]]
name="ru_server"
path="src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.2" ,features=["runtime","http1","http2","server"]}
tokio = { version = "1", features = ["full"] }
futures-core = "0.3.12"
tokio-stream="0.1.2"
anyhow = "1.0.38"
err_tools = "0.1.0"
async-std = "1.9.0"
url = "2.2.0"

chrono = "0.4.19"
glob = "0.3.0"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
str_tools = {path="../../mlibs/str_tools/"}
serde_json = "1.0.61"
